# RE-Evidence-Hub

./: .gitignore  AGENTS.md  AIExporter.py  README.md  SECURITY.md  ai_instructions.md  binary_agent_mcp_server.py  binary_agent_server.py  config.py  function_ghidra_binary_analyst.py  host_config.py  pipeline.py  post_process.py  project_layout.py  pyproject.toml  requirements-core.txt  requirements-headless.txt  requirements-optional.txt  requirements.txt  revhub_cli.py  run_exporter.py  test_function.py  test_hybrid.py  test_query.py
.github/: pull_request_template.md
ai_tools/: config.py  embeddings.py  ghidra_types.py  memory.py  string_search.py  strings.py
docs/: README.md  ai-agent-guide.md  architecture.md  artifact-schemas.md  autonomous-agent.md  current-state.md  first-automated-ai-pass.md  function-annotations.md  getting-started.md  local-evidence-api.md  network-reconstruction.md  project-audit-and-roadmap.md  projects-and-exports.md  semantic-search.md
experimental/: README.md  __init__.py  agent_controller.py  agent_executor.py  ai_planner.py  analysis_agent.py  analyze_binary.py  build_chunks.py  build_embeddings_host.py  build_index.py  callgraph_agent.py  context_engine.py  investigation_loop.py  llm_interface.py  local_agent.py  tool_agent.py  vector_indexer.py  vector_query.py
exporters/: ai_context_exporter.py  ai_summary_exporter.py  callgraph_exporter.py  datatype_exporter.py  embedding_exporter.py  function_exporter.py  function_summary_exporter.py  global_exporter.py  import_exporter.py  manifest_exporter.py  memory_exporter.py  search_index_exporter.py  string_exporter.py
project_exports/: README.md
samples/: README.md
tests/: test_agent_evidence.py  test_agent_mcp.py  test_architecture_and_docs.py  test_artifact_migrations.py  test_autonomous_runner.py  test_benchmark_search.py  test_concurrent_writes.py  test_evidence_audit_comparison.py  test_local_evidence.py  test_network_capture_contract.py  test_network_reconstruction.py  test_post_process.py  test_public_release_check.py  test_revhub.py  test_sample_export.py  test_semantic_index.py
tools/: __init__.py  _ghidra_export_entry.py  agent_controller.py  agent_evidence.py  agent_executor.py  agent_tools.json  ai_answer.py  analysis_tools.py  analyze_binary.py  autonomous_naming_runner.py  benchmark_search.py  binary_triage.py  build_class_registry.py  build_local_index.py  build_name_review_queue.py  campaign_status.py  context_engine.py  evidence_client.py  evidence_collector.py  evidence_tools.py  export_comparison.py  file_lock.py  function_annotations.py  function_index_builder.py  generate_evidence_pack.py  headless_export.py  hybrid_search.py  investigation_ledger.py  investigation_loop.py  investigation_memory.py  local_agent.py  local_evidence.py  migrate_artifacts.py  naming_candidates.py  network_capture.py  network_reconstruction.py  protocol_contract.py  public_release_check.py  query_engine.py  report_generator.py  (+6 more)
util/: decompiler.py  (+3 more)
(+23 files in other folders)
