[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "re-evidence-hub"
version = "0.2.0"
description = "RE-Evidence-Hub — portable binary evidence, local query APIs, networking reconstruction, and reviewed AI workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
# Supported baseline only. The Ghidra Script Manager exporter runs in Ghidra's
# own Python and does not use these. Heavier stacks are optional extras below.
dependencies = [
    "flask==3.1.3",
    "requests==2.34.2",
    "numpy==2.4.6",
]

[project.optional-dependencies]
# Supported portable semantic index (pulls in PyTorch). Results remain leads.
semantic = ["sentence-transformers==5.6.0"]
# Headless export via PyGhidra (also needs a local Ghidra install + JDK 21).
headless = ["pyghidra"]

[project.scripts]
revhub = "revhub_cli:main"
revhub-doctor = "revhub_cli:doctor"
revhub-serve = "binary_agent_server:main"
revhub-mcp = "binary_agent_mcp_server:main"
revhub-query = "tools.evidence_tools:main"

# Flat layout: top-level scripts are modules, and the analysis code lives in
# packages. Enumerated explicitly so the build is deterministic.
[tool.setuptools]
py-modules = [
    "revhub_cli",
    "binary_agent_server",
    "binary_agent_mcp_server",
    "host_config",
    "project_layout",
]

[tool.setuptools.packages.find]
include = ["tools*", "exporters*", "util*", "experimental*"]
